<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:orientation="vertical">

    <com.mooc.resource.widget.CommonTitleLayout
        android:id="@+id/commonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctl_adapteStatusBar="true"
        app:ctl_middle_text="意见反馈"
        app:ctl_middle_text_color="@color/color_2"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/text_feedback_ac_title"
                android:textColor="@color/color_2"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcy_feed_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_E5E5E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="12dp"
                android:gravity="left"
                android:text="@string/text_feedback_ac_content"
                android:textColor="@color/color_2"
                android:textSize="16sp" />


            <com.mooc.my.widget.ClearEditText
                android:id="@+id/activity_feedback_content"
                android:layout_width="match_parent"
                android:layout_height="115dp"
                android:background="@drawable/shape_radius1_5_color_f1"
                android:gravity="top"
                android:hint="@string/hint_feedback_ac_content"
                android:minLines="3"
                android:paddingLeft="12dp"
                android:paddingTop="10dp"
                android:paddingRight="12dp"
                android:paddingBottom="10dp"
                android:textColor="@color/color_5"
                android:textColorHint="@color/color_9"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tv_content_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:gravity="right"
                android:text="@string/feed_str_content_count"
                android:textColor="@color/color_9"
                android:textSize="12sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_E5E5E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="12dp"
                android:gravity="left"
                android:text="@string/text_feedback_ac_img"
                android:textColor="@color/color_2"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_feedback_img"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/tv_img_count"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="right|bottom"
                    android:text="@string/feed_str_img_count"
                    android:textColor="@color/color_9"
                    android:textSize="12sp" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/color_E5E5E5" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="12dp"
                android:gravity="left"
                android:text="@string/text_feedback_ac_contact"
                android:textColor="@color/color_2"
                android:textSize="16sp" />

            <com.mooc.my.widget.ClearEditText
                android:id="@+id/activity_feedback_phone"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/shape_radius1_5_color_f1"
                android:gravity="center_vertical"
                android:hint="@string/hint_feedback_ac_contact"
                android:inputType="phone"
                android:maxLines="1"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:textColor="@color/color_5"
                android:textColorHint="@color/color_9"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/activity_feedback_submit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="30dp"
                android:background="@mipmap/iv_bg_green_two"
                android:clickable="true"
                android:gravity="center"
                android:onClick="submit"
                android:text="@string/text_str_sub_feed_back"
                android:textColor="@color/color_white"
                android:textSize="14sp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>