<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.mooc.resource.widget.CommonTitleLayout
        android:id="@+id/commonTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctl_adapteStatusBar="true"
        app:ctl_middle_text="联系客服"
        app:ctl_right_text_color="@color/color_2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_F7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="25dp"
                android:text="@string/text_str_meng_title"
                android:textColor="@color/color_2"
                android:textSize="15sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDescOneTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_meng_one_title"
                    android:textColor="@color/color_2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvDescOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvDescOneTitle"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/text_meng_one"
                    android:textColor="@color/color_2"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/tvTwoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_meng_two_title"
                    android:textColor="@color/color_2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvTwoTitle"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/text_meng_phone"
                    android:textColor="@color/color_82A2C7"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />

                <View
                    android:id="@+id/viewTabLine"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_below="@+id/tvPhone"
                    android:layout_alignLeft="@+id/tvPhone"
                    android:layout_alignRight="@+id/tvPhone"
                    android:background="@color/color_82A2C7"
                    tools:ignore="RtlHardcoded" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDescThreeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_ment_three_title"
                    android:textColor="@color/color_2"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvDescThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tvDescThreeTitle"
                    android:lineSpacingExtra="5dp"
                    android:text="@string/text_meng_three"
                    android:textColor="@color/color_2"
                    android:textSize="15sp"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>


            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:src="@mipmap/my_bg_customer_service"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/tvWxM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:text="@string/text_meng_wx"
                android:textColor="@color/color_2"
                android:textSize="15sp" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>