<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="85dp"
            android:src="@mipmap/my_iv_feed_edit"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="28dp"
            android:text="@string/text_feedback"
            android:textColor="@color/color_3"
            android:textSize="22sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="54dp"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/text_feed_empty_hint"
            android:textColor="@color/color_9"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_feed_empty_submit"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="70dp"
        android:background="@mipmap/my_bg_green_btn"
        android:gravity="center"
        android:text="@string/text_feed_empty_submit"
        android:textColor="@color/color_white"
        android:textSize="@dimen/sp_14" />
</RelativeLayout>
