<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.mooc.resource.widget.CommonTitleLayout
        android:id="@+id/commonTitleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctl_adapteStatusBar="true"
        app:ctl_middle_text="打卡"
        app:ctl_right_icon="@mipmap/my_ic_share_gray"
        app:layout_constraintTop_toTopOf="parent" />

    <com.mooc.resource.widget.MoocSwipeRefreshLayout
        android:id="@+id/moocSwipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <com.mooc.commonbusiness.widget.HeadView
                    android:id="@+id/mivHead"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="@dimen/dp_10"
                    android:layout_marginRight="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="当前获得0积分"
                    android:textColor="@color/color_9"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@+id/mivHead" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp">

                    <com.mooc.my.widget.PieView
                        android:id="@+id/pieView"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:padding="20dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/my_ic_pie_arrow_up"
                        android:translationY="20dp"
                        app:layout_constraintBottom_toTopOf="@+id/tvStart"
                        app:layout_constraintLeft_toLeftOf="@id/pieView"
                        app:layout_constraintRight_toRightOf="@id/pieView" />

                    <TextView
                        android:id="@+id/tvStart"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/my_bg_clock_text"
                        android:gravity="center"
                        android:text="点击\n打卡"
                        android:textColor="@color/color_white"
                        app:layout_constraintBottom_toBottomOf="@id/pieView"
                        app:layout_constraintLeft_toLeftOf="@id/pieView"
                        app:layout_constraintRight_toRightOf="@id/pieView"
                        app:layout_constraintTop_toTopOf="@id/pieView" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/tvSignDays"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="已连续签到0天"
                    android:textColor="@color/color_6"
                    android:textSize="@dimen/sp_14"
                    app:layout_constraintTop_toBottomOf="@id/pieView" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/adhereSignDays"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/color_6"
                        android:textSize="@dimen/sp_14"
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvSignDays"
                        tools:text="您 2021。10。07 未打卡"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/carSignDaysBtn"
                        android:layout_width="84dp"
                        android:layout_height="30dp"
                        android:layout_marginLeft="15dp"
                        android:background="@drawable/shape_radius15_color_primary"
                        android:gravity="center"
                        android:text="去补打卡"
                        android:textColor="@color/color_white"
                        android:textSize="@dimen/sp_14"
                        android:visibility="gone"
                        app:layout_constraintLeft_toRightOf="@+id/adhereSignDays"
                        app:layout_constraintTop_toBottomOf="@id/tvSignDays"
                        tools:visibility="gone" />
                </LinearLayout>


                <com.mooc.my.widget.CheckInDaysView
                    android:id="@+id/checkinDaysView"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/adhereSignDays" />

                <View
                    style="@style/ViewLine1pxStyle"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp" />

                <TextView
                    android:id="@+id/tvSignCount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="17dp"
                    android:gravity="center"
                    android:text="今日有0位小伙伴打卡"
                    android:textColor="@color/color_3"
                    android:textSize="15sp"
                    app:layout_constraintTop_toBottomOf="@+id/checkinDaysView" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/revSign"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/color_F7"
                    android:paddingLeft="10dp"
                    android:paddingBottom="5dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvSignCount" />

                <TextView
                    android:id="@+id/tvRule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/sign_rule_title"
                    android:textColor="@color/color_3"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/revSign" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/sign_rule_detail"
                    android:textColor="@color/color_3"
                    android:textSize="13sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRule" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="15dp"
                    android:text="@string/re_sign_rule_title"
                    android:textColor="@color/color_3"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvRule" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="30dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@string/re_sign_rule"
                    android:textColor="@color/color_3"
                    android:textSize="13sp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </com.mooc.resource.widget.MoocSwipeRefreshLayout>

</LinearLayout>
